# pgarrow

./: README.md  pgarrow.py  pyproject.toml  start-services.sh  test_pgarrow.py
.github/workflows/: deploy-package-to-pypi.yaml  test.yaml
